update deprecation warnings